--- a/result_implementation.org
+++ b/result_implementation.org
@@ -30,14 +30,23 @@ are replaceable with other components on an as-needed basis.
 * METT module
   Before the experiment is started, the module shuffles the order of
   trials used in the experiment. This results in each participant
-  getting a psuedo-random and non-systematic order of trials. The
-  trials are then invoked in order. Upon invocation the trial handler
-  loads the relevant from disk, showing a blank screen meanwhile. Once
-  the images have been loaded the picture of the neutral expression is
-  showed a fixed, configurable number of frames. Once the configured
-  number of frames has been rendered, the emotional picture also for a
-  configurable but different number of frames. Then, finally the
-  neutral image is shown for the configured number of frames. The
-  screen is then cleared and the trial yields control back to the
-  experiment.
+  getting a psuedo-random and non-systematic order of trials. 
+
+  The trials are then invoked in order. Upon invocation the trial
+  handler loads the relevant from disk, showing a blank screen
+  meanwhile. Once the images have been loaded the picture of the
+  neutral expression is showed a fixed, configurable number of
+  frames. Once the configured number of frames has been rendered, the
+  emotional picture also for a configurable but different number of
+  frames. Then, finally the neutral image is shown for the configured
+  number of frames. After this, the system displays an input prompt
+  and starts accepting keyboard input from the users. Once an answer
+  has been collected , the screen is then cleared and the trial yields
+  control back to the ex periment.
+
+  Once the set of trials has been completed, the system, takes the
+  trial data and combines it with the response data. This results in a
+  one-row per trial data-set, which is then serialize and saved to
+  disk as a csv-file.
+
 
