--- a/result_implementation.org
+++ b/result_implementation.org
@@ -28,6 +28,14 @@ are replaceable with other components on an as-needed basis.
   languages, Swedish and English were created. These assets are used
   to progrmatically translate the application.
 
+* Initialization module
+  The initialization module of the system manages initializing the
+  system on load. The first task of the is to collect the subject
+  identifier and experimenter initials from the experimenter. Once
+  this is performed, the current-time and hostname are also collected
+  to help with diagnostics. The system then proceeds to deserialize
+  configuration files and load these into memory.
+
 * METT module
   Before the experiment is started, the module shuffles the order of
   trials used in the experiment. This results in each participant
@@ -43,7 +51,7 @@ are replaceable with other components on an as-needed basis.
   number of frames. After this, the system displays an input prompt
   and starts accepting keyboard input from the users. Once an answer
   has been collected , the screen is then cleared and the trial yields
-  control back to the ex periment.
+  control back to experiment.
 
   Once the set of trials has been completed, the system, takes the
   trial data and combines it with the response data. This results in a
