--- a/outline.org
+++ b/outline.org
@@ -710,12 +710,17 @@
 
 ** Implementation
    An application was developed using the PsychoPy library
-   \cite{Peirce2007}. The PsychoPy library was used because it offers
-   excellent accuracy in the presentation of stimuli. Moreover,
-   PsychoPy has excellent data-output components allowing ease of data
-   collection. The software artefact designed for the present study
-   was developed incrementally in iterations aiming to fullfill a
-   growing subset of the requirements.
+   \cite{Peirce2007} which is a module designed for the Python 2
+   programming language. The PsychoPy library was used because it
+   offers excellent accuracy in the presentation of
+   stimuli. Additionally, PsychoPy has excellent data collection
+   components allowing for largeer ease of data processing.
+
+   The software artefact designed for the present study was developed
+   incrementally in iterations aiming to fullfill a growing subset of
+   the requirements. This sort of explorative process allows
+   developers to better adapt the software being developed as their
+   understanding of the requirements grows.
    
 ** Evaluation
    $N=?$ participants were administered the test
