--- a/outline.org
+++ b/outline.org
@@ -266,24 +266,31 @@
     based on the theoretical framework introduced by
     \citep{Salovey1990}. In version 2.0 it consisted of 141 items
     across four facets of emotional intelligence
-    \citep{Mayer2003}. MSCEIT attempts measure performance based on a
-    set of eight tasks with two for each facet \citep{Mayer2003}. The
-    MSCEIT tasks cover a number of emotional abilities including
-    recognition of emotional pictures and faces, understanding and
-    managing them \citep{Mayer2003}. One differentiating aspect of
-    MSCEIT is its focus on emotional problem-solving. In an evaluation
-    of MSCEIT 2.0 \citet{Mayer2003} found both sufficiently reliable
-    as well as consistent with its theoretical foundations. The
-    validity however been disputed, \citet{Rossen2008} found results
-    running contrary to the factor structure used found by
+    \citep{Mayer2003}. MSCEIT attempts to measure performance based on
+    a set of eight tasks, mapping two tasks for each facet
+    \citep{Mayer2003}. The tasks used in MSCEIT cover a number of
+    different emotional abilities including recognition of emotional
+    pictures and faces as well as understanding and managing emotions
+    \citep{Mayer2003}. One differentiating aspect of MSCEIT is its
+    focus on emotional problem-solving, where test-takers are posed
+    with imaginary situations in which emotional intelligence is
+    required.
+
+    In an evaluation of MSCEIT 2.0 \citet{Mayer2003} found both
+    sufficiently reliability as well as consistency with its
+    theoretical foundations. The validity of MSCEIT has however been
+    disputed. \citet{Rossen2008} found results running contrary to the
+    factor structure used found in the validation study by
     \citet{Mayer2003}. The results found by \citet{Rossen2008} seem to
     suggest that the sub-scales do not match the intended theoretical
-    concepts. For measuring trait emotional intelligence,
-    \cite{Salovey1995} introduced Trait meta-mood scale (TTMS) which
-    aims to measure the tendency to attend to one's moods and
-    emotions. The TTMS scale has been found not to correlate with
-    MSCEIT, indicating that it is a separate construct from ability
-    measured by MSCEIT \citep{Warwick2004}.
+    concepts, putting the test into question. 
+
+    For measuring trait emotional intelligence, \cite{Salovey1995}
+    introduced Trait meta-mood scale (TTMS) which aims to measure the
+    tendency to attend to one's moods and emotions. The TTMS scale has
+    been found not to correlate with MSCEIT, indicating that it is a
+    separate construct from ability measured by MSCEIT
+    \citep{Warwick2004}.
 
     Another interesting inventory for measuring emotional intelligence
     is the Profile of Emotional Competence (PEC), consisting of 50
