--- a/outline.org
+++ b/outline.org
@@ -21,7 +21,7 @@
   \parencite{Fontaine2007}. Emotions may have both internal
   and external antecedents \parencite{Scherer2005}.
   
-  One important purpose of emotions is regulating social interactions
+  One important adaptive function of emotions is regulating social interactions
   by facilitating group cohesion and collaboration. Understanding the
   emotions of others is an essential aspect of many social
   situations. \parencite{Niedenthal2012}.
@@ -63,22 +63,26 @@
   abilities, affirming to some degree the convergent validity to the
   construct of emotional intelligence.
   
-  Another approach that might be taken for emotional intelligence testing
-  is using emotional facial expressions in a manner similar to
-  \citet{Schlegel2012}. Indeed facial expressions, \citet{Ekman1969a}
-  found, are to a large extent culturally invariant. The set of
-  culturally invariant basic emotions \citet{Ekman1992} later defined
-  as anger, fear, sadness, enjoyment, disgust and surprise.
+  Another approach that might be taken for emotional intelligence
+  testing is using emotional facial expressions in a manner similar to
+  \citet{Schlegel2012}. Being able to recognize emotions in the faces
+  of others seems to be an important social ability. This suggest
+  facial expression recognition ability could be seen as a measure of
+  general emotional intelligence. Facial expressions,
+  \citet{Ekman1969a} found, are to a large extent culturally
+  invariant. The set of culturally invariant basic emotions
+  \citet{Ekman1992} later defined as anger, fear, sadness, enjoyment,
+  disgust and surprise.
 
   Cultural invariance is an important property for tests of emotional
   intelligence, suggesting that micro-expression recognition may be an
-  appropriate measure of emotional competency. Indeed,
-  \citet{Ekman2003} introduced the brief affect recognition task
-  (BART) as a means by emotion recognition can be measured. One trial in
-  the BART paradigm consists of a display of an emotional facial
-  expression with forward- and backward masks of a neutral emotional
-  face to avoid after-images \citep{Ekman2003}.
-
+  appropriate measure of emotional intelligence. \citet{Ekman2003}
+  introduced the brief affect recognition task (BART) as a means by
+  emotion recognition can be measured. One trial in the BART paradigm
+  consists of a display of an emotional facial expression with
+  forward- and backward masks of a neutral emotional face to avoid
+  after-images \citep{Ekman2003}.
+  
 ** Research problem
    Testing and training applications being a central part of
    micro-expression research \citep{Ekman1992}. However, despite
@@ -96,10 +100,12 @@
    The creation of such a test could be relevant for a number of
    areas. Firstly, education of psychologists, psychotherapists, and
    other mental health professionals might benefit from improved
-   training tools. Second, applications in recruiting situations may
-   help organizations make better recruitment decisions. Finally,
-   psychological tests using the micro-expression paradigm may be
-   improved using the principles.
+   training tools, likewise applications can be found for training
+   police and other law enforcement professionals. Second,
+   applications in recruiting situations may help organizations make
+   better recruitment decisions. Finally, psychological tests using
+   the micro-expression paradigm may be improved based on the
+   development of new tests.
      
 ** Research question
    What are the key principles for developing EQ-tests based on micro-expressions?
@@ -208,9 +214,13 @@
    captured as follows: emotional intelligence is a continuous factor
    determining the depth and accuracy of processing at the crossroads
    of emotion and cognition. Even if earlier intergrative approaches
-   have been critized \citep[e.g~][]{Cherniss2010}, multifaceted
+   have been critized \citep[e.g.~][]{Cherniss2010}, multifaceted
    approaches may still be valuable, however this would require
-   combining the theoretical multiple theoretical frameworks.
+   combining the theoretical multiple theoretical frameworks. For any
+   psychometric test to be useful, it needs to be loosely coupled to
+   its theoretical concepts, while retaining internal cohessiveness,
+   developing tests based on the insection of theoretical frameworks
+   may therefore make a test independent of which framework prevails.
     
 ** Uses for emotional intelligence
    
@@ -229,10 +239,10 @@
 #+END_QUOTE
 
    Within the areas mentioned by \citet{Mayer2008}, it seems that
-   measures of emotional intelligence, at least degree predicts
-   outcomes. Indeed, the results within the aforementioned areas
-   suggest that instruments measuring emotional intelligence may be
-   practically applicable.
+   measures of emotional intelligence, have some predictive
+   validity. Indeed, the results within the aforementioned areas
+   suggest that tests and instruments measuring emotional intelligence
+   may be practically applicable.
 
    Another area discussed is the relationship of emotional
    intelligence and leadership. Indeed, it is commonly held that
